$size[14]{$u{update on 18.12.2024:}
  * another big merge with both ender and loftar to fix crashing
  * removed inventory sorting from ard in favor of inventory sorting from ender

$size[14]{$u{update on 23.11.2024:}
  * Short form: massive merge with Ender and all the loftar code
  * Inventory proxies have now a little handle at the right side for easier dragging
  * Inventory sorting from Ard implemented
  * Option to remove biome border on minimap (black outline)
  * Made sure client runs fine on linux
  * Added overlay for coops, troughs and gardenpots
    Whenever gardenpots need soil or water, it will displayed accordingly.
    If nothing is planted, it will show an empty pot.
    If they are ready to be harvested, it will show a flower symbol.

$size[14]{$u{update on 16.11.2024:}
  * fixed bugs
  * fixed steam launch
  * image upload preview is always showing default entry (should be village banner)
  * fixed bug in marker upload
  * changed food upload to fix hunger

$size[14]{$u{update on 13.11.2024:}
  * fixed some crashes, ignored other causes
  * improved image upload. Fixed close button. Added preview to uploaded pictures
  * kind of fixed refill but. It still says cancelled tho...
  * I think there was more but i don't remember.

$size[14]{$u{update on 01.11.2024:}
  * fixed map upload features:
    you are now able to upload maptiles / markers / location all individually
  * fixed an issue where alt+tab might cause you to click through the UI
  * merged loftars changes
  * If you experience crashes, please reach out to me on the forums
    My client logs errors in it's own folder

$size[14]{$u{update on 16.06.2024:}
  * added metal plow to radar
  * minor crash fixes

$size[14]{$u{update on 12.06.2024:}
  * added critter aura from havoc
  * added option to spread container windows from ender
  * minor crash fixes

$size[14]{$u{update on 06.06.2024:}
  * fixed decal click on chests
  * added disable window animation option