@@ -811,7 +811,7 @@ public class OptWnd extends WindowX {
 	addPanelButton("Widget shortcuts", 'k', keybind, colum, row++);
 	addPanelButton("Global shortcuts", 's', shortcuts, colum, row++);
 	//addPanelButton("",'l', Action.);
-	if (LoginScreen.authmech.get() == "steam") {
+	if (LoginScreen.authmech.get() == "steam" || LoginScreen.authmech.get() == null) {
 	    addPanelButton("Log out to native", 'q', Action.LOGOUT_AND_SWITCH_AUTH_METHOD, colum, row++);
 	}
 	if (LoginScreen.authmech.get() == "native") {
